# CMakeTemplate

./: CMakeLists.txt  README.md  cpackage.json
3th/common/jsoncpp/: Findjsoncpp.cmake  cpackage.json
cmake/: get_git_version.cmake
code/app/cmake_template_app/: CMakelists.txt
code/app/cmake_template_app/version/: resource.h  win_version_info.rc
code/interface/: CMakeTemplateSDK.hpp
code/src/: CMakeTemplate.cpp  CMakeTemplate.hpp  CMakeTemplateSDK.cpp  FileUtils.cpp  FileUtils.h
code/version/: version.h.in  win_version_info.rc.in
doc/: configuration.txt
script/: build.bat
